--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   mvc_pattern: 6.3.0
 
+  intl: ^0.16.1
+  global_configuration: ^1.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
